--- a/app/src/main/res/layout/content_rest_service.xml
+++ b/app/src/main/res/layout/content_rest_service.xml
@@ -12,9 +12,7 @@
         android:id="@+id/button"
         android:layout_width="match_parent"
         android:layout_height="56dp"
-        android:text="Consumir Servicio"
-        tools:layout_editor_absoluteX="128dp"
-        tools:layout_editor_absoluteY="8dp" />
+        android:text="Consumir Servicio" />
 
     <TextView
         android:id="@+id/textView"
@@ -22,7 +20,6 @@
         android:layout_height="401dp"
         android:layout_marginTop="8dp"
         android:text="TextView"
-        app:layout_constraintTop_toBottomOf="@+id/button"
-        tools:layout_editor_absoluteX="8dp" />
+        app:layout_constraintTop_toBottomOf="@+id/button" />
 
 </android.support.constraint.ConstraintLayout>
