--- a/app/src/main/res/layout/content_rest_service.xml
+++ b/app/src/main/res/layout/content_rest_service.xml
@@ -8,18 +8,10 @@
     tools:context="com.example.erick.serviciorest.RestService"
     tools:showIn="@layout/activity_rest_service">
 
-    <Button
-        android:id="@+id/button"
+    <ListView
+        android:id="@+id/custom_list"
         android:layout_width="match_parent"
-        android:layout_height="56dp"
-        android:text="Consumir Servicio" />
-
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="368dp"
-        android:layout_height="401dp"
-        android:layout_marginTop="8dp"
-        android:text="TextView"
-        app:layout_constraintTop_toBottomOf="@+id/button" />
+        android:layout_height="match_parent"
+        />
 
 </android.support.constraint.ConstraintLayout>
